# hobbits-cookiecutters

./: README.md
analyzer/{{cookiecutter.class}}/: CMakeLists.txt  {{cookiecutter.class_file}}.h  {{cookiecutter.editor_class_file}}.h
core-importexport/{{cookiecutter.class}}/: {{cookiecutter.class_file}}.cpp
display/{{cookiecutter.class}}/: CMakeLists.txt  {{cookiecutter.class_file}}.h
importexport/{{cookiecutter.class}}/: CMakeLists.txt  {{cookiecutter.class_file}}.h  {{cookiecutter.export_editor_file}}.cpp  {{cookiecutter.export_editor_file}}.h  {{cookiecutter.import_editor_file}}.cpp  {{cookiecutter.import_editor_file}}.h
operator/{{cookiecutter.class}}/: CMakeLists.txt  {{cookiecutter.class_file}}.h  {{cookiecutter.editor_class_file}}.h
python-analyzer/: cookiecutter.json
python-analyzer/{{cookiecutter.slug}}/: plugin.json  {{cookiecutter.slug}}.py
python-display/: cookiecutter.json
python-display/{{cookiecutter.slug}}/: plugin.json  {{cookiecutter.slug}}.py
python-exporter/{{cookiecutter.slug}}/: plugin.json  {{cookiecutter.slug}}.py
python-importer/: cookiecutter.json
python-importer/{{cookiecutter.slug}}/: plugin.json  {{cookiecutter.slug}}.py
python-operator/: cookiecutter.json
python-operator/{{cookiecutter.slug}}/: plugin.json  {{cookiecutter.slug}}.py
